--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.74.1",
     "typescript": "^5.4.4",
     "unplugin-element-plus": "^0.8.0",
     "vite": "^5.2.8",
